# romancal

./: .env  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  1542.mosaic_pipeline.rst  CHANGES.rst  CITATION.cff  CODEOWNERS.txt  CONTRIBUTING.md  JenkinsfileRT  JenkinsfileRT_dev  MANIFEST.in  README.md  REVERT.md  TESTING.md  crds_help.md  dummy value_jumpstep.asdf  plot_exclusive.py  pyproject.toml  pytest.ini  r00992-a3001_full_001_asn.json  r00992-a3001_image_001_asn.json  requirements-dev-st.txt  requirements-dev-thirdparty.txt  requirements-dev.txt  requirements-reg.txt  requirements-sdp.txt  requirements.txt  setup.cfg  setup.py  test_requirements.json  tox.ini
.github/: CODEOWNERS  dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: release.yml
.github/workflows/: build.yml  changelog.yml  ci_test.yml  contexts.yml  data.yml  download_data.yml  label_pull_request.yml  publish-to-pypi.yml  python-package.yml  retrieve_cache.yml  roman_ci.yml  roman_ci_cron.yaml  tests.yml  tests_devdeps.yml  tests_extra.yml  webbpsf_data.yml
changes/: 1354.assign_wcs.rst  1357.outlier_detection.0.rst  1357.outlier_detection.1.rst  1357.outlier_detection.2.rst  1373.general.rst  1375.docs.rst  1383.resample.rst  1394.mosaic_pipeline.rst  1398.ramp_fitting.rst  1399.general.rst  1411.associations.rst  1419.docs.rst  1426.general.rst  1433.general.rst  1436.outlier_detection.rst  1437.associations.rst  1438.flatfield.rst  1445.general.rst  1446.general.rst  1447.general.rst  1448.tweakreg.0.rst  1457.source_catalog.rst  1465.skymatch.rst  1471.associations.rst  1473.general.rst  1474.general.rst  1484.tweakreg.rst  1485.multiband_catalog.rst  1493.general.rst  1498.resample.rst  1499.stpipe.rst  1503.source_detection.rst  1504.docs.rst  1505.association.rst  1509.stpipe.rst  1512.source_catalog.rst  1525.exposure_pipeline.0.rst  1525.exposure_pipeline.1.rst  1527.general.rst  1528.general.rst  (+225 more)
docs/: conf.py  conftest.py  index.rst  make.bat  rtd_environment.yaml
docs/exts/: numfig.py
docs/roman/: changes.rst  introduction.rst  package_index.rst  pipeline_installation.rst  pipeline_levels.rst  pipeline_naming_conventions.rst  pipeline_parameters.rst  pipeline_ref_files.rst  pipeline_run.rst  pipeline_static_preview.rst  pipeline_steps.rst  set_velocity_aberration.rst  versioning.rst
pytest_romancal/: stpsf_plugin.py
romancal/: __init__.py  conftest.py  step.py
romancal/assign_wcs/: __init__.py  assign_wcs.py  assign_wcs_step.py  pointing.py  utils.py
romancal/associations/: __init__.py  _association.py  _association_io.py  _exceptions.py  _generate.py  _load_as_asn.py  _load_asn.py  _main.py  _mk_skycell_asn_from_skycell_list.py  _mk_skycell_list.py  _pool.py  _registry.py  asn_from_list.py  association.py  association_io.py  generate.py  load_as_asn.py  load_asn.py  main.py  mk_patchlist.py  mk_skycell_asn_from_patchlist.py  mk_skycell_asn_from_skycell_list.py  mk_skycell_list.py  mk_skycellasn.py  multiband_asn.py  pool.py  registry.py  skycell_asn.py
romancal/dark_current/: dark_current_step.py  dark_sub.py
romancal/dark_decay/: __init__.py  dark_decay.py  dark_decay_step.py
romancal/datamodels/: __init__.py  container.py  core.py  dqflags.py  dynamicdq.py  extension.py  fileio.py  filetype.py  flat.py  gls_rampfit.py  image.py  level1.py  library.py  migration.py  open_impl.py  ramp.py  rampfitoutput.py  referencefile.py
romancal/dq_init/: dq_init_step.py  dq_initialization.py  dqflags.py
romancal/flatfield/: README.md  flat_field.py  flat_field_step.py
romancal/flux/: __init__.py  flux_step.py
romancal/jump/: __init__.py  jump.py  jump_step.py  twopoint_difference.py
romancal/lib/: basic_utils.py  dms.py  dqflags.py  engdb_lib.py  engdb_mast.py  engdb_tools.py  progress.py  psf.py  save_wcs.py  siafdb.py  signal_slot.py  statistics.py  suffix.py  wcsinfo_to_wcs.py
romancal/linearity/: linearity_step.py
romancal/multiband_catalog/: __init__.py  _background.py  _catalog_generator.py  _detection_image.py  _metadata.py  _multiband_catalog.py  _utils.py  background.py  catalog_generator.py  detection_image.py  multiband_catalog.py  multiband_catalog_step.py  utils.py
romancal/orientation/: _lib.py  _pointing.py  _siaf.py  _transforms.py  _v1_calculate.py  _wcs.py  pointing_summary.py  set_telescope_pointing.py  set_velocity_aberration.py  v1_calculate.py
romancal/outlier_detection/: _fileio.py  array_library.py  outlier_detection.py  outlier_detection_step.py  utils.py
romancal/patch_match/: patch_match.py  patch_plot.py
romancal/photom/: photom.py  photom_step.py
romancal/pipeline/: __init__.py  calroman_level1.py  calroman_level2.py  exposure_pipeline.py  highlevel_pipeline.py  hl_pipeline.py  mosaic_pipeline.py
romancal/proj_match/: proj_match.py  skytile_plot.py
romancal/ramp_fitting/: ramp_fit_step.py
romancal/refpix/: __init__.py  constants.py  data.py  data2.py  refpix.py  refpix_step.py
romancal/regtest/: .#test_mos_pipeline.py  benchmarks.py  conftest.py  regtestdata.py  resource_tracker.py  sdp_pools_source.py  test_catalog.py  test_dark_current.py  test_dark_decay.py  test_elp_tvac.py  test_hlp.py  test_hlp_pipeline.py  test_jump_det.py  test_linearity.py  test_match_skycell.py  test_mos_pipeline.py  test_mos_skycell_pipeline.py  test_multiband_catalog.py  test_psf_library.py  test_ramp_fit_likelihood.py  test_ramp_fitting.py  test_refpix.py  test_regtestdata.py  test_resample.py  test_resource_tracker.py  test_skycell.py  test_skycell_generation.py  test_skymatch.py  test_source_catalog.py  test_tweakreg.py  test_wfi18_transient.py  test_wfi_16resultants.py  test_wfi_dq_init.py  test_wfi_flat_field.py  test_wfi_grism_16resultants.py  test_wfi_grism_pipeline.py  test_wfi_image_16resultants.py  test_wfi_image_pipeline.py  test_wfi_photom.py  test_wfi_pipeline.py  (+2 more)
romancal/resample/: __init__.py  _exptime_resampler.py  _l3_wcs.py  _utils.py  exptime_resampler.py  gwcs_drizzle.py  l3_wcs.py  meta_blender.py  (+4 more)
scripts/: asn_from_list  okify_regtests  verify_install_requires
(+473 files in other folders)
