[metadata]
name = romancal
description = Library for calibration of science observations from the Nancy Grace Roman Space Telescope
long_description = Library for calibration of science observations from the Nancy Grace Roman Space Telescope
author = Roman calibration pipeline developers
license = BSD-3-Clause
url = https://github.com/spacetelescope/romancal
project_urls =
    Bug Tracker = https://github.com/spacetelescope/romancal/issues
    Documentation = https://roman-pipeline.readthedocs.io/en/stable/
    Source Code = https://github.com/spacetelescope/romancal
classifiers =
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Astronomy
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
zip_safe = False
python_requires = >=3.7
setup_requires =
    setuptools_scm
install_requires =
    asdf>=2.7.2
    astropy>=4.0
    crds>=7.4.1.3
    gwcs>=0.14.0
    jsonschema>=3.0.2
    numpy>=1.19
    pyparsing>=2.2
    requests>=2.22
    stdatamodels @ git+https://github.com/spacetelescope/stdatamodels.git
    stpipe>=0.1.0

[options.extras_require]
docs =
    matplotlib
    sphinx
    sphinx-automodapi
    sphinx-rtd-theme
    stsci-rtd-theme
    sphinx-astropy
    sphinx-asdf
test =
    ci-watson>=0.3.0
    pytest>=4.6.0
    pytest-astropy
    codecov>=1.6.0

[flake8]
select = F, W, E101, E111, E112, E113, E401, E402, E501, E711, E722
max-line-length = 130
exclude =
    docs,
    .tox,
    .eggs
ignore = E203, W503, W504, W605

aws =
    stsci-aws-utils>=0.1.2
ephem =
    pymssql-linux==2.1.6
    jplephem==2.9

[options.entry_points]
asdf_extensions =
    romancal = romancal.datamodels.extension:RomanDataModelExtension
stpipe.steps =
    romancal = romancal.stpipe.integration:get_steps

[build-sphinx]
source-dir = docs
build-dir = docs
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 4.6
norecursedirs = docs/_build scripts .tox
asdf_schema_tests_enabled = true
asdf_schema_validate_default = false
asdf_schema_root = romancal/datamodels/schemas
junit_family = xunit2
inputs_root = roman-pipeline
results_root = roman-pipeline-results
doctest_plus = true
doctest_rst = true
text_file_format = rst
addopts = --show-capture=no --open-files --doctest-ignore-import-errors
